--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <iframe src="https://www.youtube.com/embed/iMWMh9HuVyY?si=7AKkBxfNr-r9watm" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
-    <p>Hello Liam, what are some things you can say in math class and in bed?
+    <p>Hello, what are some things you can say in math class and in bed?
     </p>
     <p><a href="website.html">swap</a></p>
   </body>
