--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Hello, what are some things you can say in math class and in bed?
     </p>
     <p><a href="website.html">swap</a></p>
+    <p><a href="test.html">flex</a></p>
   </body>
 </html>
