--- a/website.html
+++ b/website.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    .b {
+      cursor: pointer;
+    }
+  </style>
   <head>
     <title>Other Website</title>
   </head>
 </html>
 
-<button>
+<button class='b'>
   button
 </button>
 
