--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </p>
     <p><a href="website.html">swap</a></p>
     <p><a href="test.html">flex</a></p>
+    <p><a href="cookieclicker.html">Cookie Clicker</a></p>
   </body>
 </html>
