--- a/cookieclicker.html
+++ b/cookieclicker.html
@@ -11,6 +11,7 @@
         }
     </style>
 <body>
+    <p><a href="index.html">back</a></p>
     <button class='u' id='reset' onclick="resetF()">RESET</button>
     <p id='clickcounter'>Cookies Per Click: 1</p>
     <button class="b" onclick="incrementCounter()">Cookie</button>
